# claude2

./: .gitignore  A31G11x.SFR  A31G11x.sfd  A31G12x.svd  CLAUDE.md  CMakeLists.txt  README.md  package.json  pyocd.yaml
.claude/: settings.local.json
app/: main.cpp
bsp/: board.hpp
bsp/a31g123/: board.cpp
bsp/mm32f0162/: board.cpp
cmake/: arm-none-eabi.cmake  target-a31g123.cmake  target-mm32f0162.cmake
core_cm0/: handlers.cpp  nvic.hpp  scb.hpp  stack.cpp  startup.cpp  systick.hpp
hal/: clock.hpp  gpio.hpp  systick.hpp
mcu/a31g123/: clock.cpp  gpio.cpp  handlers.cpp  systick.cpp
mcu/a31g123/ld/: a31g123.ld
mcu/a31g123/reg/: clock.hpp  gpio.hpp  wdt.hpp
mcu/mm32f0162/: clock.cpp  gpio.cpp  handlers.cpp  systick.cpp
mcu/mm32f0162/ld/: mm32f0162.ld
mcu/mm32f0162/reg/: clock.hpp  gpio.hpp
